# rusty-content

./: .env  .travis.yml  Cargo.toml  LICENSE  README.md
migrations/2019-11-18-201109_create_post/: up.sql
src/: main.rs  schema.rs
src/component/: mod.rs
src/component/post/: api.rs  service.rs
src/model/: post.rs
src/other/: database.rs  mod.rs  types.rs
src/services/: database.rs  mod.rs
src/services/post/: api.rs  mod.rs  service.rs
