[package]
name = "content"
version = "0.1.0"
authors = ["'dezkoat' <'dezkoat13@gmail.com'>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6"
router = "0.6"
enclose = "1.1.8"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
