[package]
name = "content"
version = "0.1.0"
authors = ["'dezkoat' <'dezkoat13@gmail.com'>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6"
router = "0.6"
enclose = "1.1.8"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
uuid = { version = "0.8", features = ["v5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
